src/objects/Config_Item__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Path__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <label>Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Config Item</label>
</CustomObject>